firmware/imx: add waveform firmware files for new PL modes
* add epdc_PL_*.Type4.ihex and epdc_PL_*.Type10.ihex to continue
  supporting old 7-level Plastic Logic display types
* update epdc_PL_STD.fw.ihex for new 3-level display
  types (starting with Type11)

Signed-off-by: Guillaume Tucker <guillaume.tucker@plasticlogic.com>

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -143,7 +143,13 @@ fw-shipped-$(CONFIG_FB_MXC_EINK_PANEL) += imx/epdc_E60_V110.fw \
                 imx/epdc_E97_V110.fw \
                 imx/epdc_PL_STD.fw \
                 imx/epdc_PL_DUAL.fw \
-                imx/epdc_PL_TILED.fw
+                imx/epdc_PL_TILED.fw \
+                imx/epdc_PL_STD.Type4.fw \
+                imx/epdc_PL_DUAL.Type4.fw \
+                imx/epdc_PL_TILED.Type4.fw \
+                imx/epdc_PL_STD.Type10.fw \
+                imx/epdc_PL_DUAL.Type10.fw \
+                imx/epdc_PL_TILED.Type10.fw
 
 fw-shipped-all := $(fw-shipped-y) $(fw-shipped-m) $(fw-shipped-)
 
