spidev: add dynamic hotplug configuration
Add a platform driver that will use the spi_new_device function
to dynamically configure an spidev device.  This enables hardware
to be hotplugged and removed as the SPI bus.chip_select
configuration can then be freed.  Other drivers following this
scheme can thus share a same SPI port.  The board configuration
needs to define the spidev_hotplug device with spi_board_info as
platform data (only a single device for now).

This feature is enabled by the CONFIG_SPI_SPIDEV_HOTPLUG
build-time option.

Signed-off-by: Guillaume Tucker <guillaume.tucker@plasticlogic.com>

--- a/drivers/spi/Kconfig
+++ b/drivers/spi/Kconfig
@@ -417,6 +417,14 @@ config SPI_SPIDEV
 	  Note that this application programming interface is EXPERIMENTAL
 	  and hence SUBJECT TO CHANGE WITHOUT NOTICE while it stabilizes.
 
+config SPI_SPIDEV_HOTPLUG
+	bool "Enable dynamic configuration hotplug"
+	depends on SPI_SPIDEV
+	help
+	  This enables the spidev configuration to be dynamically used when the
+	  driver module is loaded.  The SPI device is then freed when the
+	  driver is removed, enabling another driver to use it.
+
 config SPI_TLE62X0
 	tristate "Infineon TLE62X0 (for power switching)"
 	depends on SYSFS
