am335x_evm_*_defconfig: update with latest changes
Update exising default configurations for Plastic Logic
Hummingbird Z1.3, Robin, HB Z5.x and add new configuration for
Z6.x and Z7.x.

* rename am335x_evm_z50_defconfig -> am335x_evm_z5_defconfig
  as this applies to all HB Z5.x board versions
* add am335x_evm_z6_z7_defconfig for the Z6-Z7 boards
* remove CONFIG_MODELF_SPI_WITHOUT_HDC
* remove CONFIG_MODFEF_CONNECTION_*
* add CONFIG_MODELF_PL_Z6_Z7
* rename CONFIG_MODELF_PL_Z5_0 -> CONFIG_MODELF_PL_Z5
* enable CONFIG_SPI_SPIDEV_HOTPLUG

Signed-off-by: Guillaume Tucker <guillaume.tucker@plasticlogic.com>

--- a/arch/arm/configs/am335x_evm_z5_defconfig
+++ b/arch/arm/configs/am335x_evm_z5_defconfig
@@ -1595,6 +1595,7 @@ CONFIG_SPI_OMAP24XX=y
 # SPI Protocol Masters
 #
 CONFIG_SPI_SPIDEV=m
+CONFIG_SPI_SPIDEV_HOTPLUG=y
 # CONFIG_SPI_TLE62X0 is not set
 
 #
@@ -2380,14 +2381,12 @@ CONFIG_FB_ST7735=y
 CONFIG_FB_MODELF=m
 # CONFIG_MODELF_DEBUG is not set
 # CONFIG_MODELF_DEFERRED_IO is not set
-# CONFIG_MODELF_CONNECTION_ASYNC is not set
-CONFIG_MODELF_CONNECTION_SPI=y
-CONFIG_MODELF_SPI_WITHOUT_HDC=y
 # CONFIG_MODELF_SWAP_SPI_BYTE is not set
 CONFIG_MODELF_PL_HARDWARE=m
 # CONFIG_MODELF_SWAP_SPI_IO is not set
 # CONFIG_MODELF_PL_Z1_3 is not set
-CONFIG_MODELF_PL_Z5_0=y
+CONFIG_MODELF_PL_Z5=y
+# CONFIG_MODELF_PL_Z6_Z7 is not set
 # CONFIG_MODELF_PL_ROBIN is not set
 # CONFIG_FB_OMAP_BOOTLOADER_INIT is not set
 CONFIG_OMAP2_VRAM=y
