--- a/arch/arm/configs/am335x_evm_z6_z7_defconfig
+++ b/arch/arm/configs/am335x_evm_z6_z7_defconfig
@@ -1568,8 +1568,7 @@ CONFIG_I2C_OMAP=y
 #
 # Other I2C/SMBus bus drivers
 #
-CONFIG_I2C_SC18IS60X=y
-CONFIG_I2C_SC18IS60X_SHARED_SPI=y
+# CONFIG_I2C_SC18IS60X is not set
 # CONFIG_I2C_STUB is not set
 # CONFIG_I2C_DEBUG_CORE is not set
 # CONFIG_I2C_DEBUG_ALGO is not set
@@ -2384,11 +2383,11 @@ CONFIG_FB_MODELF=m
 # CONFIG_MODELF_DEFERRED_IO is not set
 # CONFIG_MODELF_SWAP_SPI_BYTE is not set
 CONFIG_MODELF_PL_HARDWARE=m
-CONFIG_MODELF_SWAP_SPI_IO=y
+# CONFIG_MODELF_SWAP_SPI_IO is not set
 # CONFIG_MODELF_PL_Z1_3 is not set
 # CONFIG_MODELF_PL_Z5 is not set
-# CONFIG_MODELF_PL_Z6_Z7 is not set
-CONFIG_MODELF_PL_ROBIN=y
+CONFIG_MODELF_PL_Z6_Z7=y
+# CONFIG_MODELF_PL_ROBIN is not set
 # CONFIG_FB_OMAP_BOOTLOADER_INIT is not set
 CONFIG_OMAP2_VRAM=y
 CONFIG_OMAP2_VRFB=y
