S1D135x1: add MODELF_FB_PL_Z6_Z7 configuration
Add MODELF_FB_PL_Z6_Z7 configuration option to select the
new Hummingbird Z6.x and Z7.x with associated GPIO
definitions in pl_hardware.c.  This is an intermediate step
and the Z6.x and Z7.x are not actually supported yet.

Signed-off-by: Guillaume Tucker <guillaume.tucker@plasticlogic.com>

--- a/drivers/video/Kconfig
+++ b/drivers/video/Kconfig
@@ -2492,6 +2492,13 @@ config MODELF_PL_Z5
 	help
 	  Choose this option to enable PL Hummingbird Z5.0 expansion board.
 
+config MODELF_PL_Z6_Z7
+	bool "Hummingbird Z6.x or Z7.x"
+	help
+	  Choose this option to enable PL Hummingbird Z6.x or Z7.x expansion
+	  boards.  They both present the same hardware interface but are
+	  compatible with different display types.
+
 config MODELF_PL_ROBIN
 	bool "Robin v1.0"
 	help
