S1D135x1: rename CONFIG_MODELF_PL_Z5_Z0 -> PL_Z5
* drivers/video/Kconfig: rename PL_Z5_0 -> PL_Z5 as it
  applies to all Hummingbird Z5.x board versions
* pl_hardware: use PL_Z5 instead of PL_Z5_0

Signed-off-by: Guillaume Tucker <guillaume.tucker@plasticlogic.com>

--- a/drivers/video/Kconfig
+++ b/drivers/video/Kconfig
@@ -2493,8 +2493,8 @@ config MODELF_PL_Z1_3
 	help
 	  Choose this option to enable PL Hummingbird Z1.3 expansion board.
 
-config MODELF_PL_Z5_0
-	bool "Hummingbird Z5.0"
+config MODELF_PL_Z5
+	bool "Hummingbird Z5.x"
 	help
 	  Choose this option to enable PL Hummingbird Z5.0 expansion board.
 
