drivers/i2c/busses: add i2c-s1d135x1 SPI-I2C bridge driver
Add a new I2C bus driver using the SPI-I2C bridge feature
provided by the S1D135x1 Epson EPD controller.  This relies on
the main S1D135x1 driver to initialise the controller and
populate the API functions for the SPI-I2C driver via the
s1d135x1_spi structure, defined in include/linux/modelffb.h.

It polls the status register using SPI transactions to wait for
the completion of I2C messages.  This could be improved by
sharing the interrupt from the main S1S135x1 driver, which would
increase the I2C throughput but also the code complexity.

Signed-off-by: Guillaume Tucker <guillaume.tucker@plasticlogic.com>

--- a/drivers/i2c/busses/Kconfig
+++ b/drivers/i2c/busses/Kconfig
@@ -843,6 +843,14 @@ config I2C_SC18IS60X_SHARED_SPI
 	  in order to let this driver access a same SPI device instance.  This
 	  is useful when not enough chip-selects are available in hardware.
 
+config I2C_S1D135X1
+	tristate "Epson S1D135x1 modelF SPI to I2C bridge driver"
+        depends on FB_MODELF
+        help
+	  Supports I2C over SPI via the Epson S1D135x1 modelF controller.  This
+	  registers a new general purpose I2C bus driver, although it does rely
+	  on the modelffb driver to initialise the SPI device.
+
 config I2C_STUB
 	tristate "I2C/SMBus Test Stub"
 	depends on EXPERIMENTAL && m
